# watchdog

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  DEPLOYMENT.md  GRAFANA_AUTH_IMPLEMENTATION.md  LICENSE  NOTICE.md  README.md  USER GUIDE.md  USER_GUIDE.md  VALIDATION.md  __init__.py  conftest.py  docker-compose.prod.yml  docker-compose.stable.yml  docker-compose.yml  fresh.sh  install.py  install.sh  package-lock.json  pyproject.toml  test_grafana_proxy.sh
.github/agents/: claude.agent.md
.github/workflows/: ci.yml  publish-images.yml
.vite/vitest/: results.json
BeGateway/: Dockerfile  README.md  __init__.py  config.py  main.py  requirements.txt
BeGateway/models/: __init__.py  exceptions.py
BeGateway/routers/: gateway_router.py
BeGateway/services/: config.py  gateway_service.py  rate_limit.py
BeGateway/tests/: conftest.py  test_config_security.py  test_gateway_backend_primitives.py  test_gateway_rate_limit.py  test_gateway_unit_edges.py  test_lifespan_non_blocking.py  test_startup_checks.py
BeObservant/: .coveragerc  .pylintrc  Dockerfile  __init__.py  config.py  coverage.xml  database.py  db_models.py  entrypoint.sh  main.py  mypy.ini  pytest.ini  requirements.txt
BeObservant/custom_types/: __init__.py  json.py
BeObservant/middleware/: __init__.py  audit.py  concurrency_limit.py  dependencies.py  error_handlers.py  limits.py  rate_limit.py  request_size_limit.py  resilience.py
BeObservant/models/: __init__.py
BeObservant/routers/: internal_router.py
BeObservant/services/: agent_service.py  audit_context.py  becertain_proxy_service.py  benotified_proxy_service.py  database_auth_service.py  grafana_proxy_service.py  internal_service.py  loki_service.py  notification_service.py  system_service.py  tempo_service.py
BeObservant/tests/: _env.py  conftest.py  test_agent_service.py  test_alertmanager_agents_audit_edges.py  test_alerts_helpers_edges.py  test_api_keys.py  test_api_keys_legacy_wrappers.py  test_audit_compliance_features.py  test_audit_sanitization.py  test_auth_cookie_flags.py  test_auth_ops_more.py  test_auth_router_edges.py  test_auth_security_policies.py  test_base_proxy_helpers.py  test_becertain_and_loki_router_edges.py  test_becertain_proxy_service.py  test_becertain_router.py  test_benotified_proxy_tenant_isolation.py  test_config_edges.py  test_config_security.py  test_dashboard_create_folder_access.py  test_dashboard_ops_sync.py  test_dashboard_update_folder_access.py  test_database_auth_and_helper_edges.py  test_database_auth_mfa_oidc_helpers.py  test_datasource_ops_unit.py  test_datasource_org_scope_user_owned_keys.py  test_dependencies_edges.py  test_folder_hide_ops.py  test_folder_ops_unit_more.py  test_folder_scope_ops.py  test_folder_update_errors.py  test_grafana_proxy_service.py  test_grafana_service_folder_update.py  test_grafana_service_org_scope.py  test_group_ops.py  test_group_ops_prune.py  test_group_ops_unit.py  test_ip_allowlist_dependency.py  test_legacy_skipped_wrappers.py  (+20 more)
configs/: alertmanager.yaml  envoy.yaml  grafana-proxy.conf  loki.yaml  otel-agent.yaml  otel-ingester.yaml  otlp-gateway.conf  prometheus.yaml  tempo.yaml
configs/grafana/: grafana-datasource.yaml
deployments/compose/: docker-compose.stable.yml
gatekeeper/: README.md  config.py  main.py
gatekeeper/models/: exceptions.py
gatekeeper/routers/: __init__.py  gateway_router.py
gatekeeper/services/: __init__.py
gatekeeper/tests/: test_config_security.py  test_gateway_unit_edges.py  test_lifespan_non_blocking.py  test_startup_checks.py
gateway-auth-service/: README.md  __init__.py  db_models.py  main.py  requirements.txt
gateway-auth-service/routers/: __init__.py  gateway_router.py
gateway-auth-service/services/: __init__.py  config.py  gateway_service.py  rate_limit.py  token_cache.py
gateway-auth-service/tests/: __init__.py  test_gateway_rate_limit.py  test_lifespan_non_blocking.py
release/: install.sh  release-image.workflow-template.yml  restart.sh  uninstall.sh  versions.json
scripts/: heartbeat.sh
server/: .dockerignore  Dockerfile  __init__.py  config.py  database.py  db_models.py  entrypoint.sh  main.py  requirements.txt
server/middleware/: __init__.py  audit.py  auth.py  auth_deps.py  dependencies.py  error_handlers.py  limits.py  rate_limit.py  resilience.py
server/models/: __init__.py  agent_models.py  alertmanager_models.py  alerts.py  api_key_models.py  auth_models.py  channels.py  grafana_models.py  group_models.py  loki_models.py  receivers.py  rules.py  silences.py  user_models.py
server/routers/: __init__.py  agents_router.py  alertmanager_router.py  auth_router.py  grafana_router.py  internal_router.py  loki_router.py  system_router.py  tempo_router.py
server/scripts/: debug_note_persist.py
server/services/: __init__.py  agent_service.py  alertmanager_service.py  audit_context.py  auth_service.py  becertain_job_runner_service.py  becertain_job_service.py  becertain_job_store_service.py  becertain_proxy_service.py  benotified_proxy_service.py  database_auth_service.py  gateway_service.py  grafana_proxy_service.py  grafana_service.py  grafana_user_sync_service.py  jira_service.py  loki_service.py  notification_service.py  storage_db_service.py  storage_service.py  system_service.py  tempo_service.py
server/tests/: _env.py  conftest.py  test_agent_service.py  test_alert_ops.py  test_alertmanager_router_silence_security.py  test_api_keys.py  test_audit_compliance_features.py  test_audit_sanitization.py  test_auth_security_policies.py  test_becertain_job_service.py  test_becertain_proxy_service.py  test_grafana_auth.py  (+45 more)
tests/: .dockerignore  Dockerfile  generator.sh  logs.py  logs.sh  start.sh  traces.py  traces.sh
ui/: .dockerignore  .eslintrc.json  .stylelintrc.json  Dockerfile  babel.config.json  eslint.config.cjs  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
watchdog/: .coveragerc  .pylintrc  __init__.py  config.py  coverage.xml  database.py  entrypoint.sh  main.py  requirements.txt
(+585 files in other folders)
