[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "observantio"
version = "0.1.0"
description = "Observantio mono-repo shared developer tooling and test dependencies."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Observantio" }
]
keywords = ["observability", "lgtm", "fastapi", "telemetry", "grafana"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2",
  "pylint>=3.3.0",
  "pre-commit>=4.3.0",
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "pytest-asyncio>=1.3.0",
]

watchdog = [
  "fastapi",
  "starlette",
  "httpx",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy",
  "uvicorn",
  "python-jose",
  "pyjwt[crypto]",
  "bcrypt",
  "passlib",
  "python-multipart",
  "email-validator",
  "cryptography",
  "psutil",
  "redis",
  "asyncpg",
  "psycopg2-binary",
  "protobuf",
  "opentelemetry-proto",
  "pyotp",
  "aiosmtplib",
  "tenacity",
  "pyyaml",
  "aiokafka",
  "hvac",
]

gatekeeper = [
  "fastapi",
  "httpx",
  "pydantic",
  "sqlalchemy",
  "uvicorn",
  "redis",
]

notifier = [
  "fastapi",
  "starlette",
  "httpx",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy",
  "uvicorn",
  "python-multipart",
  "cryptography",
  "pyjwt[crypto]",
  "passlib",
  "bcrypt",
  "email-validator",
  "aiosmtplib",
  "redis",
  "asyncpg",
  "psycopg2-binary",
  "tenacity",
  "pyyaml",
  "types-pyyaml",
  "pyotp",
  "hvac",
]

resolver = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "pydantic",
  "pydantic-settings",
  "pyjwt",
  "numpy",
  "scipy",
  "scikit-learn",
  "sqlalchemy",
  "psycopg2-binary",
  "redis",
]

test = [
  "observantio[dev,watchdog,gatekeeper,notifier,resolver]",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = [
  "resolver/tests",
  "gatekeeper/tests",
  "notifier/tests",
  "watchdog/tests",
]
addopts = "-q"
pythonpath = [
  "resolver",
  "gatekeeper",
  "notifier",
  "watchdog",
]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::pytest.PytestRemovedIn9Warning",
]

[tool.coverage.run]
branch = true
omit = [
  "tests/*",
  "ui/*",
  "showcase/*",
]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
]
show_missing = true

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
explicit_package_bases = true
exclude_gitignore = true
ignore_missing_imports = true
exclude = [
  "^(ui/|showcase/|configs/|tests/|build/|dist/|venv/|\\.venv/|__pycache__/|watchdog/tests/|gatekeeper/tests/|notifier/tests/|resolver/tests/)",
]

[tool.pylint.main]
jobs = 1
ignore = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".venv", "venv", "node_modules", "build", "dist", "tmp", "vendor"]
ignore-paths = [
  "^\\./?resolver/tests/.*$",
  "^\\./?gatekeepery/tests/.*$",
  "^\\./?notifier/tests/.*$",
  "^\\./?watchdog/tests/.*$",
  "^\\./?tests/.*$",
  "^\\./?ui/.*$",
  "^\\./?showcase/.*$",
]
init-hook = "import os,sys; root=os.getcwd(); [sys.path.insert(0,p) for p in [f'{root}/resolver',f'{root}/gatekeeper',f'{root}/Notifier',f'{root}/Watchdog'] if p not in sys.path]"

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-arguments",
  "too-many-positional-arguments",
  "line-too-long",
  "too-few-public-methods",
  "too-many-instance-attributes",
  "too-many-public-methods",
  "too-many-locals",
  "too-many-branches",
  "too-many-statements",
  "too-many-return-statements",
  "too-many-lines",
  "global-statement",
  "global-variable-not-assigned",
  "import-outside-toplevel",
  "wrong-import-order",
  "ungrouped-imports",
  "protected-access",
  "unused-argument",
  "logging-fstring-interpolation",
  "no-else-return",
  "no-else-continue",
  "try-except-raise",
  "simplifiable-condition",
  "consider-merging-isinstance",
  "too-many-nested-blocks",
  "trailing-whitespace",
  "trailing-newlines",
  "missing-final-newline",
  "import-error",
  "no-name-in-module",
  "no-member",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 6
max-positional-arguments = 6

[tool.pylint.similarities]
min-similarity-lines = 8

[tool.hatch.build.targets.wheel]
bypass-selection = true
